<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="left"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="10px"
        android:paddingTop="20px"
        android:id="@+id/Form1_textView1"
        android:text="@string/Form1_textView1"
        android:textSize="22dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingTop="20px"
            android:id="@+id/Form1_textView2"
            android:text="@string/Form1_textView2"
            android:textSize="22dp" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:paddingTop="20px"
            android:id="@+id/Form1_editText1"
            android:inputType="number"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingTop="20px"
            android:id="@+id/Form1_textView3"
            android:text="@string/Form1_textView3"
            android:textSize="22dp" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:paddingTop="20px"
            android:id="@+id/Form1_editText2"
            android:inputType="number"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingTop="20px"
            android:id="@+id/Form1_textView4"
            android:text="@string/Form1_textView4"
            android:textSize="22dp" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20px"
            android:id="@+id/Form1_editText3"
            android:inputType="number"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingTop="20px"
            android:id="@+id/Form1_textView5"
            android:text="@string/Form1_textView5"
            android:textSize="22dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_rowSpan="2"
            android:id="@+id/radioGroup1">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Άντρας"
            android:id="@+id/radioButton1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Γυναίκα"
            android:id="@+id/radioButton2" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingTop="20px"
            android:id="@+id/Form1_textView6"
            android:text="@string/Form1_textView6"
            android:textSize="22dp" />

        <Spinner
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner1"
            android:entryValues="@array/drinks_array"
            android:layout_row="7"
            android:layout_column="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingTop="20px"
            android:id="@+id/Form1_textView7"
            android:text="@string/Form1_textView7"
            android:textSize="22dp" />

        <Spinner
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            android:entryValues="@array/num_drinks_array"
            android:layout_row="7"
            android:layout_column="1" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="20px"
        android:paddingTop="10px"
        android:id="@+id/Button_Calculate"
        android:text="@string/button_calculate"
        android:onClick="onClick" />/>

</LinearLayout>